ts_show_cylinder_2

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1759,7 +1759,7 @@ gaugeCategory = Transmission
 
 gaugeCategory = Knock
 	knock1Gauge = m_knockCyl1, "Knock Cyl 1", "dBv", -60, 10, -60, -60, 10, 10, 0, 0
-	knock2Gauge = m_knockCyl2, "Knock Cyl 2", "dBv", -60, 10, -60, -60, 10, 10, 0, 0
+	knock2Gauge = m_knockCyl2, "Knock Cyl 2", "dBv", -60, 10, -60, -60, 10, 10, 0, 0@@if_ts_show_cylinder_2
 	knock3Gauge = m_knockCyl3, "Knock Cyl 3", "dBv", -60, 10, -60, -60, 10, 10, 0, 0@@if_ts_show_cylinder_3
 	knock4Gauge = m_knockCyl4, "Knock Cyl 4", "dBv", -60, 10, -60, -60, 10, 10, 0, 0@@if_ts_show_cylinder_4
 	knock5Gauge = m_knockCyl5, "Knock Cyl 5", "dBv", -60, 10, -60, -60, 10, 10, 0, 0@@if_ts_show_cylinder_5
@@ -2057,7 +2057,7 @@ menuDialog = main
 			groupChildMenu = ignAdder4Table,		"Ignition blend table 4", 0, { isIgnitionEnabled && ignBlends4_blendParameter != 0 }
 		groupMenu = "Cylinder ign trims"
 			groupChildMenu = ignTrimTbl1,		"Ignition trim cyl 1"
-			groupChildMenu = ignTrimTbl2,		"Ignition trim cyl 2", 0, { isInjectionEnabled && cylindersCount >= 2 }
+			groupChildMenu = ignTrimTbl2,		"Ignition trim cyl 2", 0, { isInjectionEnabled && cylindersCount >= 2 }@@if_ts_show_cylinder_2
 			groupChildMenu = ignTrimTbl3,		"Ignition trim cyl 3", 0, { isInjectionEnabled && cylindersCount >= 3 }@@if_ts_show_cylinder_3
 			groupChildMenu = ignTrimTbl4,		"Ignition trim cyl 4", 0, { isInjectionEnabled && cylindersCount >= 4 }@@if_ts_show_cylinder_4
 			groupChildMenu = ignTrimTbl5,		"Ignition trim cyl 5", 0, { isInjectionEnabled && cylindersCount >= 5 }@@if_ts_show_cylinder_5
@@ -2661,7 +2661,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "# wire each output to the corresponding cylinder number"
 		field = "# rusEFI handles firing order"
 		field = "Injection Output 1",						injectionPins1, {isInjectionEnabled == 1}
-		field = "Injection Output 2",						injectionPins2, {isInjectionEnabled == 1 && injectionMode != 3 && cylindersCount > 1}
+		field = "Injection Output 2",						injectionPins2, {isInjectionEnabled == 1 && injectionMode != 3 && cylindersCount > 1}@@if_ts_show_cylinder_2
 		field = "Injection Output 3",						injectionPins3, {isInjectionEnabled == 1 && injectionMode != @@injection_mode_e_IM_SINGLE_POINT@@ && cylindersCount > 2}@@if_ts_show_cylinder_3
 		field = "Injection Output 4",						injectionPins4, {isInjectionEnabled == 1 && injectionMode != 3 && cylindersCount > 3}@@if_ts_show_cylinder_4
 		field = "Injection Output 5 ",					injectionPins5, {isInjectionEnabled == 1 && injectionMode != @@injection_mode_e_IM_SINGLE_POINT@@ && cylindersCount > 4}@@if_ts_show_cylinder_5
@@ -2677,7 +2677,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = cylinderBankSelect, "Cylinder Banks", yAxis
 		field = "Cylinder 1",						cylinderBankSelect1, {isInjectionEnabled == 1}
-		field = "Cylinder 2",						cylinderBankSelect2, {isInjectionEnabled == 1 && injectionMode != @@injection_mode_e_IM_SINGLE_POINT@@ && cylindersCount > 1}
+		field = "Cylinder 2",						cylinderBankSelect2, {isInjectionEnabled == 1 && injectionMode != @@injection_mode_e_IM_SINGLE_POINT@@ && cylindersCount > 1}@@if_ts_show_cylinder_2
 		field = "Cylinder 3",						cylinderBankSelect3, {isInjectionEnabled == 1 && injectionMode != @@injection_mode_e_IM_SINGLE_POINT@@ && cylindersCount > 2}@@if_ts_show_cylinder_3
 		field = "Cylinder 4",						cylinderBankSelect4, {isInjectionEnabled == 1 && injectionMode != 3 && cylindersCount > 3}@@if_ts_show_cylinder_4
 		field = "Cylinder 5 ",						cylinderBankSelect5, {isInjectionEnabled == 1 && injectionMode != 3 && cylindersCount > 4}@@if_ts_show_cylinder_5
@@ -2724,7 +2724,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = testInjectors, "Injector Test"
 		commandButton = @@INJECTOR_1_NAME@@, cmd_test_inj1
-		commandButton = @@INJECTOR_2_NAME@@, cmd_test_inj2, { cylindersCount >= 2 }
+		commandButton = @@INJECTOR_2_NAME@@, cmd_test_inj2, { cylindersCount >= 2 }@@if_ts_show_cylinder_2
 		commandButton = "Injector #3", cmd_test_inj3, { cylindersCount >= 3 }@@if_ts_show_cylinder_3
 		commandButton = "Injector #4", cmd_test_inj4, { cylindersCount >= 4 }@@if_ts_show_cylinder_4
 		commandButton = "Injector #5", cmd_test_inj5, { cylindersCount >= 5 }@@if_ts_show_cylinder_5
@@ -2777,7 +2777,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "engine, like a v-twin or some V6/V10 engines"
 		field = "#Positive numbers retard, negative numbers advance"
 		field = "Offset cyl 1",							timing_offset_cylinder1
-		field = "Offset cyl 2",							timing_offset_cylinder2, {cylindersCount > 1}
+		field = "Offset cyl 2",							timing_offset_cylinder2, {cylindersCount > 1}@@if_ts_show_cylinder_2
 		field = "Offset cyl 3",							timing_offset_cylinder3, {cylindersCount > 2}@@if_ts_show_cylinder_3
 		field = "Offset cyl 4",							timing_offset_cylinder4, {cylindersCount > 3}@@if_ts_show_cylinder_4
 		field = "Offset cyl 5",							timing_offset_cylinder5, {cylindersCount > 4}@@if_ts_show_cylinder_5
@@ -4029,7 +4029,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = ""
 		field = "Select the nearest sensor for each cylinder"
 		field = "Cylinder 1",			knockBankCyl1,  {enableSoftwareKnock}
-		field = "Cylinder 2",			knockBankCyl2,  {enableSoftwareKnock && cylindersCount >= 2}
+		field = "Cylinder 2",			knockBankCyl2,  {enableSoftwareKnock && cylindersCount >= 2}@@if_ts_show_cylinder_2
 		field = "Cylinder 3",			knockBankCyl3,  {enableSoftwareKnock && cylindersCount >= 3}@@if_ts_show_cylinder_3
 		field = "Cylinder 4",			knockBankCyl4,  {enableSoftwareKnock && cylindersCount >= 4}@@if_ts_show_cylinder_4
 		field = "Cylinder 5",			knockBankCyl5,  {enableSoftwareKnock && cylindersCount >= 5}@@if_ts_show_cylinder_5
@@ -4887,7 +4887,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = testSpark, "Spark"
 		commandButton = @@COIL_1_NAME@@,  cmd_test_spk1
-		commandButton = @@COIL_2_NAME@@,  cmd_test_spk2,  { cylindersCount >= 2 }
+		commandButton = @@COIL_2_NAME@@,  cmd_test_spk2,  { cylindersCount >= 2 }@@if_ts_show_cylinder_2
 		commandButton = "Spark #3",  cmd_test_spk3,  { cylindersCount >= 3 }@@if_ts_show_cylinder_3
 		commandButton = "Spark #4",  cmd_test_spk4,  { cylindersCount >= 4 }@@if_ts_show_cylinder_4
 		commandButton = "Spark #5",  cmd_test_spk5,  { cylindersCount >= 5 }@@if_ts_show_cylinder_5
@@ -5357,7 +5357,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	indicatorPanel = IgnitionDiagPanel, 1, { 1 }
 		indicator = { ignitorDiagnostic1  > 1 }, { Ignition out 1: bitStringValue(outputDiagErrorList, ignitorDiagnostic1 )}, { Ignition out 1: bitStringValue(outputDiagErrorList, ignitorDiagnostic1 )}, green, black, red, black
-		indicator = { ignitorDiagnostic2  > 1 }, { Ignition out 2: bitStringValue(outputDiagErrorList, ignitorDiagnostic2 )}, { Ignition out 2: bitStringValue(outputDiagErrorList, ignitorDiagnostic2 )}, green, black, red, black
+		indicator = { ignitorDiagnostic2  > 1 }, { Ignition out 2: bitStringValue(outputDiagErrorList, ignitorDiagnostic2 )}, { Ignition out 2: bitStringValue(outputDiagErrorList, ignitorDiagnostic2 )}, green, black, red, black@@if_ts_show_cylinder_2
 		indicator = { ignitorDiagnostic3  > 1 }, { Ignition out 3: bitStringValue(outputDiagErrorList, ignitorDiagnostic3 )}, { Ignition out 3: bitStringValue(outputDiagErrorList, ignitorDiagnostic3 )}, green, black, red, black@@if_ts_show_cylinder_3
 		indicator = { ignitorDiagnostic4  > 1 }, { Ignition out 4: bitStringValue(outputDiagErrorList, ignitorDiagnostic4 )}, { Ignition out 4: bitStringValue(outputDiagErrorList, ignitorDiagnostic4 )}, green, black, red, black@@if_ts_show_cylinder_4
 		indicator = { ignitorDiagnostic5  > 1 }, { Ignition out 5: bitStringValue(outputDiagErrorList, ignitorDiagnostic5 )}, { Ignition out 5: bitStringValue(outputDiagErrorList, ignitorDiagnostic5 )}, green, black, red, black@@if_ts_show_cylinder_5
@@ -5372,7 +5372,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	indicatorPanel = InjectionDiagPanel, 1, { 1 }
 		indicator = { injectorDiagnostic1  > 1 }, { Injector out 1: bitStringValue(outputDiagErrorList, injectorDiagnostic1 )}, { Injector out 1: bitStringValue(outputDiagErrorList, injectorDiagnostic1 )}, green, black, red, black
-		indicator = { injectorDiagnostic2  > 1 }, { Injector out 2: bitStringValue(outputDiagErrorList, injectorDiagnostic2 )}, { Injector out 2: bitStringValue(outputDiagErrorList, injectorDiagnostic2 )}, green, black, red, black
+		indicator = { injectorDiagnostic2  > 1 }, { Injector out 2: bitStringValue(outputDiagErrorList, injectorDiagnostic2 )}, { Injector out 2: bitStringValue(outputDiagErrorList, injectorDiagnostic2 )}, green, black, red, black@@if_ts_show_cylinder_2
 		indicator = { injectorDiagnostic3  > 1 }, { Injector out 3: bitStringValue(outputDiagErrorList, injectorDiagnostic3 )}, { Injector out 3: bitStringValue(outputDiagErrorList, injectorDiagnostic3 )}, green, black, red, black@@if_ts_show_cylinder_3
 		indicator = { injectorDiagnostic4  > 1 }, { Injector out 4: bitStringValue(outputDiagErrorList, injectorDiagnostic4 )}, { Injector out 4: bitStringValue(outputDiagErrorList, injectorDiagnostic4 )}, green, black, red, black@@if_ts_show_cylinder_4
 		indicator = { injectorDiagnostic5  > 1 }, { Injector out 5: bitStringValue(outputDiagErrorList, injectorDiagnostic5 )}, { Injector out 5: bitStringValue(outputDiagErrorList, injectorDiagnostic5 )}, green, black, red, black@@if_ts_show_cylinder_5
