--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1891,7 +1891,7 @@ gaugeCategory = GPPWM Outputs
 	; Line 3
 	;			=							expression,				off-label,				on-label, off-bg, off-fg,  on-bg,  on-fg
 	indicator =					{ isTps2Error },				"TPS 2 OK",		"TPS 2 error",  white,  black,	red,  black@@if_ts_show_tps2_error
-	indicator =					{ isPedalError },				"Pedal OK",		"Pedal error",  white,  black,	red,  black
+	indicator =					{ isPedalError },				"Pedal OK",		"Pedal error",  white,  black,	red,  black@@if_ts_show_etb
 	indicator =					{ isCltError },				"CLT OK",			"CLT error",  white,  black,	red,  black
 	indicator =					{ isIatError },				"IAT OK",			"IAT error",  white,  black,	red,  black
 	; not implemented
