--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4372,6 +4372,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "CS Pin",								sdCardCsPin, { isSdCardEnabled }			@@if_ts_show_sd_pins
 		field = "SPI",									sdCardSpiDevice, { isSdCardEnabled }		@@if_ts_show_sd_pins
 
+	indicatorPanel = sdPresentIndicators, 1, { isSdCardEnabled }
+		indicator = { sd_present },	 "No SD card", "SD card present", white, black, green, black
+
 	indicatorPanel = sdCardActivityIndicators, 2, { isSdCardEnabled }
 		indicator = { sd_active_wr }, "SD WR", "SD WR", white, black, green, black
 		indicator = { sd_active_rd }, "SD RD", "SD RD", white, black, green, black
@@ -4392,16 +4395,16 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		commandButton = "Format",						cmd_format
 
 	indicatorPanel = sdCardStateIndicators, 2, { isSdCardEnabled }
-		indicator = { sd_present },	 "No SD card", "SD card present", white, black, green, black
 		indicator = { sd_logging_internal }, "No SD logging", "SD logging", white, black, green, black
 		indicator = { sd_msd }, "No SD USB", "SD USB",  white,  black,  green,  black
 
 	dialog = sdCard, "SD Card"
 		panel = sdCardHW
+		panel = sdPresentIndicators
 		panel = sdCardActivityIndicators
 		panel = sdCardLogging
-		panel = sdCardCommands
 		panel = sdCardStateIndicators
+		panel = sdCardCommands
 
 	dialog = tle8888Dialog, "TLE8888", yAxis
 		field = "TLE8888 SPI",							tle8888spiDevice @@if_ts_show_spi
