--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1870,8 +1870,8 @@ gaugeCategory = GPPWM Outputs
 	indicator = { etbErrorCodeBlinker0 != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etbErrorCode0)}, white, black, yellow, black
 
 	; minor info
-	indicator =						{ isFanOn },				"Fan off",				"Fan on",  white,  black,  green,  black
-	indicator =						{ isFan2On },			"Fan 2 off",			"Fan 2 on",  white,  black,  green,  black@@if_ts_show_fan2_settings
+	indicator =						{ fan1m_state },				"Fan off",				"Fan on",  white,  black,  green,  black
+	indicator =						{ fan2m_state },			"Fan 2 off",			"Fan 2 on",  white,  black,  green,  black@@if_ts_show_fan2_settings
 	indicator =				{ isMainRelayOn },		"Main relay off",	"Main relay on",  white,  black,  green,  black
 	; Line 2
 	;			=							expression,				off-label,				on-label, off-bg, off-fg,  on-bg,  on-fg
@@ -3919,8 +3919,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		commandButton = "Test Fan 2", cmd_test_fan_2
 
 	indicatorPanel = fanIndicators, 2
-		indicator = { isFanOn },	"fan 1 off", "fan 1 on", white, black, green, black
-		indicator = { isFan2On }, "fan 2 off", "fan 2 on", white, black, green, black
+		indicator = { fan1m_state },	"fan 1 off", "fan 1 on", white, black, green, black
+		indicator = { fan2m_state }, "fan 2 off", "fan 2 on", white, black, green, black
 
 	dialog = acSettingsWest, "A/C Settings"
 		field = "A/C switch",                       acSwitch
