--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1867,12 +1867,12 @@ gaugeCategory = GPPWM Outputs
 	indicator =					{ isTriggerError},			"Trigger OK",		"Trigger ERR",  white,  black,	red,  black
 	indicator = { fuelCutReasonBlinker  != 0 }, "Injection OK", { Fuel cut: bitStringValue(fuelIgnCutCodeList, fuelCutReason)}, white, black, yellow, black
 	indicator = { sparkCutReasonBlinker != 0 }, "Ignition OK",  { Ign cut: bitStringValue(fuelIgnCutCodeList, sparkCutReason)}, white, black, yellow, black
-	indicator = { etbErrorCodeBlinker0 != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etbErrorCode0)}, white, black, yellow, black
+	indicator = { etb1etbErrorCodeBlinker != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etb1etbErrorCode)}, white, black, yellow, black
 
 	; minor info
 	indicator =						{ fan1m_state },				"Fan off",				"Fan on",  white,  black,  green,  black
 	indicator =						{ fan2m_state },			"Fan 2 off",			"Fan 2 on",  white,  black,  green,  black@@if_ts_show_fan2_settings
-	indicator =				{ isMainRelayOn },		"Main relay off",	"Main relay on",  white,  black,  green,  black
+	indicator =				{ mainRelayState },		"Main relay off",	"Main relay on",  white,  black,  green,  black
 	; Line 2
 	;			=							expression,				off-label,				on-label, off-bg, off-fg,  on-bg,  on-fg
 	indicator =					{ isFuelPumpOn },		"Fuel pump off",		"Fuel pump on",  white,  black,  green,  black@@if_ts_show_fuel_pump
@@ -1901,7 +1901,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =							{ sd_msd },			"No SD USB",				"SD USB",  white,  black,  green,  black
 ;	indicator =		{ sd_active_wr },		"SD WR",		"SD WR",  white,  black,  green,  black
 ;	indicator =		{ sd_active_rd },		"SD RD",		"SD RD",  white,  black,  green,  black
-	indicator =			{ etbRevLimitActive0 },	"No ETB RPM Limit",	"ETB RPM Limit",  white,  black, yellow,  black
+	indicator =			{ etb1etbRevLimitActive },	"No ETB RPM Limit",	"ETB RPM Limit",  white,  black, yellow,  black
 
 	indicator = { wbo0_hasFault }, { WBO0: bitStringValue(wboFaultCodeList, faultCode0)}, { WBO0: bitStringValue(wboFaultCodeList, faultCode0)}, white, black, red, black
 	indicator = {injectorHwIssue}, "inj", "INJ", white, black, red, black@@if_ts_show_inj_diag
