--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -215,7 +215,7 @@ enable2ndByteCanID = false
 
 	egoCorrectionForVeAnalyze = { 100 + fuelPidCorrection1 }
 
-	wbo0_hasFault = { enableAemXSeries && ((faultCode0 >= 3) && (faultCode0 != 7)) }
+	wbo0_hasFault = { enableAemXSeries && ((wb1faultCode >= 3) && (wb1faultCode != 7)) }
 
 [PcVariables]
 	fuelUnits = bits, U08, [0:2], "kPa", "MAF", "%TPS", "Lua"
@@ -258,7 +258,7 @@ enable2ndByteCanID = false
 	ignModeList = bits, U08, [0:3], "Single Coil", "Sequential", "Wasted", "Two Coils"
 
 ; ClearReason
-	fuelIgnCutCodeList = bits, U08, [0:7], "None", "fatal error", "setting disabled", "RPM limit", "fault RPM limit", "boost cut", "oil pressure", "stop requested", "ETB problem", "launch control", "max injector duty", "flood clear", "engine sync", "kickstart", "ign off", "Lua", "ACR", "Lambda Prot", "GDI Comms", "Brake"
+	fuelIgnCutCodeList = bits, U08, [0:7], "None", "fatal error", "setting disabled", "RPM limit", "ETB RPM limit", "boost cut", "oil pressure", "stop requested", "ETB problem", "launch control", "max injector duty", "flood clear", "engine sync", "kickstart", "ign off", "Lua", "ACR", "Lambda Prot", "GDI Comms", "Brake", "Fatal"
 
 ; TpsState
 	etbCutCodeList = bits, U08, [0:7], "None", "engine stopped", "TPS error", "PPS error", "TPS noise", "Autotune", "Lua", "INVALID", "N/A", "Redundancy", "PPS noise", "Jam"
@@ -1903,7 +1903,7 @@ gaugeCategory = GPPWM Outputs
 ;	indicator =		{ sd_active_rd },		"SD RD",		"SD RD",  white,  black,  green,  black
 	indicator =			{ etb1etbRevLimitActive },	"No ETB RPM Limit",	"ETB RPM Limit",  white,  black, yellow,  black
 
-	indicator = { wbo0_hasFault }, { WBO0: bitStringValue(wboFaultCodeList, faultCode0)}, { WBO0: bitStringValue(wboFaultCodeList, faultCode0)}, white, black, red, black
+	indicator = { wbo0_hasFault }, { WBO0: bitStringValue(wboFaultCodeList, wb1faultCode)}, { WBO0: bitStringValue(wboFaultCodeList, wb1faultCode)}, white, black, red, black
 	indicator = {injectorHwIssue}, "inj", "INJ", white, black, red, black@@if_ts_show_inj_diag
 
 	; indicator = { isInjectionEnabled && fuelCutReason == 0 }, { Inj: bitStringValue(injModeList, currentInjectionMode) }, { Inj: bitStringValue(injModeList, currentInjectionMode) }, white, black, white, black
@@ -3665,30 +3665,30 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = egoSettings_IO2,	"O2 Sensor 2 I/O"
 		field = "Input channel",						afr_hwChannel2
 
-	indicatorPanel = uegoCan0Indicators, 1, { enableAemXSeries == 1 && (faultCode0 == 7 || faultCode0 == 8) }
-		indicator = { faultCode0 == 7 }, "RusEFI WBO", "AEM Gauge", green, black, yellow, black
-		indicator = { faultCode0 == 8 }, "AEM OK", "AEM ERROR", green, black, yellow, black
+	indicatorPanel = uegoCan0Indicators, 1, { enableAemXSeries == 1 && (wb1faultCode == 7 || wb1faultCode == 8) }
+		indicator = { wb1faultCode == 7 }, "RusEFI WBO", "AEM Gauge", green, black, yellow, black
+		indicator = { wb1faultCode == 8 }, "AEM OK", "AEM ERROR", green, black, yellow, black
 
-	indicatorPanel = uegoCan1Indicators, 1, { enableAemXSeries == 1 && (faultCode0 == 7 || faultCode0 == 8) }
-		indicator = { faultCode1 == 7 }, "RusEFI WBO", "AEM Gauge", green, black, yellow, black
+	indicatorPanel = uegoCan1Indicators, 1, { enableAemXSeries == 1 && (wb1faultCode == 7 || wb1faultCode == 8) }
+		indicator = { wb2faultCode == 7 }, "RusEFI WBO", "AEM Gauge", green, black, yellow, black
 
-	indicatorPanel = uegoCan0IndicatorsExt, 1, { enableAemXSeries == 1 && faultCode0 != 7 && faultCode0 != 8 }
-		indicator = { faultCode0 == 0 || faultCode0 == 7 }, "Failed", "Ready/Ok", red, black, green, black
-		indicator = { faultCode0 == 2 }, "Heating allowed", "Heating prohibited", green, black, yellow, black
-		indicator = { faultCode0 == 1 }, "Communication ok", "Timeout reading", green, black, red, black
-		indicator = { faultCode0 == 3 }, "No heating failure", "Heating failed", green, black, red, black
-		indicator = { faultCode0 == 4 }, "No overheat", "Overheat", green, black, red, black
-		indicator = { faultCode0 == 5 }, "No underheat", "Underheat", green, black, red, black
-		indicator = { faultCode0 == 6 }, "Heater supply ok", "No heater supply", green, black, yellow, black
+	indicatorPanel = uegoCan0IndicatorsExt, 1, { enableAemXSeries == 1 && wb1faultCode != 7 && wb1faultCode != 8 }
+		indicator = { wb1faultCode == 0 || wb1faultCode == 7 }, "Failed", "Ready/Ok", red, black, green, black
+		indicator = { wb1faultCode == 2 }, "Heating allowed", "Heating prohibited", green, black, yellow, black
+		indicator = { wb1faultCode == 1 }, "Communication ok", "Timeout reading", green, black, red, black
+		indicator = { wb1faultCode == 3 }, "No heating failure", "Heating failed", green, black, red, black
+		indicator = { wb1faultCode == 4 }, "No overheat", "Overheat", green, black, red, black
+		indicator = { wb1faultCode == 5 }, "No underheat", "Underheat", green, black, red, black
+		indicator = { wb1faultCode == 6 }, "Heater supply ok", "No heater supply", green, black, yellow, black
 
-	indicatorPanel = uegoCan1IndicatorsExt, 1, { enableAemXSeries == 1 && faultCode1 != 7 && faultCode0 != 8 }
-		indicator = { faultCode1 == 0 || faultCode1 == 7 }, "Failed", "Ready/Ok", red, black, green, black
-		indicator = { faultCode1 == 2 }, "Heating allowed", "Heating prohibited", green, black, yellow, black
-		indicator = { faultCode1 == 1 }, "Communication ok", "Timeout reading", green, black, red, black
-		indicator = { faultCode1 == 3 }, "No heating failure", "Heating failed", green, black, red, black
-		indicator = { faultCode1 == 4 }, "No overheat", "Overheat", green, black, red, black
-		indicator = { faultCode1 == 5 }, "No underheat", "Underheat", green, black, red, black
-		indicator = { faultCode1 == 6 }, "Heater supply ok", "No heater supply", green, black, yellow, black
+	indicatorPanel = uegoCan1IndicatorsExt, 1, { enableAemXSeries == 1 && wb2faultCode != 7 && wb1faultCode != 8 }
+		indicator = { wb2faultCode == 0 || wb2faultCode == 7 }, "Failed", "Ready/Ok", red, black, green, black
+		indicator = { wb2faultCode == 2 }, "Heating allowed", "Heating prohibited", green, black, yellow, black
+		indicator = { wb2faultCode == 1 }, "Communication ok", "Timeout reading", green, black, red, black
+		indicator = { wb2faultCode == 3 }, "No heating failure", "Heating failed", green, black, red, black
+		indicator = { wb2faultCode == 4 }, "No overheat", "Overheat", green, black, red, black
+		indicator = { wb2faultCode == 5 }, "No underheat", "Underheat", green, black, red, black
+		indicator = { wb2faultCode == 6 }, "Heater supply ok", "No heater supply", green, black, yellow, black
 
 	dialog = uegoCanStatus, "CAN UEGO 1, 2 Status", border
 		panel = uegoCan0Indicators, West
