Fan indicators not working on latest fw #7318 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1478,8 +1478,8 @@ curve = rangeMatrix, "Range Switch Input Matrix"
        ;Name               Var            Title                 Units     Lo,Hi     LowDanger,LowWarning,HiWarning,HiDanger vd,ld
 gaugeCategory = Trigger
 	triggerErrorsCounterGauge = totalTriggerErrorCounter, "Trigger error count", "count",	0,	15000,	0,	0,	10,  300,	0,	0
-	triggerSyncGapRatioGauge = triggerSyncGapRatio0,"triggerSyncGapRatio", "", -10000,10000, -10000,-10000, 10000,10000, 3,3
-	triggerStateIndexGauge = triggerStateIndex0,"triggerStateIndex", "",       -10000,10000, -10000,-10000, 10000,10000, 3,3
+	triggerSyncGapRatioGauge = trgtriggerSyncGapRatio,"triggerSyncGapRatio", "", -10000,10000, -10000,-10000, 10000,10000, 3,3
+	triggerStateIndexGauge = trgtriggerStateIndex,"triggerStateIndex", "",       -10000,10000, -10000,-10000, 10000,10000, 3,3
 	triggerPrimaryFallCounterGauge = triggerPrimaryFall,"triggerPrimaryFall", "", 0,10000.0, 0,10000.0, 0,10000.0, 3,3
 	triggerPrimaryRiseCounterGauge = triggerPrimaryRise,"triggerPrimaryRise", "", 0,10000.0, 0,10000.0, 0,10000.0, 3,3
 	triggerSecondaryFallCounterGauge = triggerSecondaryFall,"triggerSecondaryFall", "", 0,10000.0, 0,10000.0, 0,10000.0, 3,3
@@ -1703,7 +1703,7 @@ gaugeCategory = Throttle Body (incl. ETB)
 	TPSGauge			= TPSValue,		"Throttle position",			"%",		0,	100,		0,		0,	100,	100,	1,	1
 	TPS2Gauge		= TPS2Value,	"Throttle position #2",			"%",		0,	100,		0,		0,	100,	100,	1,	1
 
-	etbTargetGauge	= m_adjustedTarget0,	@@GAUGE_NAME_ETB_TARGET@@, "%",	0,	100,	0,	0,	100,	100,	1,	1
+	etbTargetGauge	= etb1m_adjustedTarget,	@@GAUGE_NAME_ETB_TARGET@@, "%",	0,	100,	0,	0,	100,	100,	1,	1
 	etbErrorGauge		= etbStatus_error,	@@GAUGE_NAME_ETB_ERROR@@,  "%",	-20,  20,	-10,	-5,	5,	10,  2, 0
 	tps1SplitGauge	= tps1Split,	"TPS1 Sensor Split",  "%",	-20,  20,	-10,	-5,	5,	10,  2, 0
 	tps2SplitGauge	= tps2Split,	"TPS2 Sensor Split",  "%",	-20,  20,	-10,	-5,	5,	10,  2, 0
@@ -4841,7 +4841,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "ETB idle maximum angle",				etbIdleThrottleRange
 
     indicatorPanel = etbIndicatorPanel, 1
-	      indicator = {jamDetected0}, "jamDetected No", "jamDetected Yes"
+	      indicator = {etb1jamDetected}, "jamDetected No", "jamDetected Yes"
 
 
 	dialog = etbDialogLeft
