--- a/firmware/config/boards/hellen/alphax-8chan/board_commands.ini
+++ b/firmware/config/boards/hellen/alphax-8chan/board_commands.ini
@@ -1,1 +1,2 @@
 cmd_set_engine_type_GM_LCV				        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_LCV_16_hex@@"
+cmd_set_engine_type_GM_SBC_GEN5		        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_SBC_GEN5_16_hex@@"
