GM Gen. 5 LT1 only:alphax-8chan_f7

--- a/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
@@ -240,7 +240,7 @@ pins:
     type: av
     function: PPS2 Sensor Input
     ts_name: 34A - PPS2 Sensor Input
-
+    color: white
 
   - pin: 1B
     function: VR1-/Hall Input max9924
