--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1878,7 +1878,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =					{ isFuelPumpOn },		"Fuel pump off",		"Fuel pump on",  white,  black,  green,  black@@if_ts_show_fuel_pump
 	indicator =				{ clutchUpState },		"No clutch Up",			"Clutch Up",  white,  black,	red,  black@@if_ts_show_clutch_up
 	indicator =				{ clutchDownState },		"No clutch down",		"Clutch down",  white,  black, yellow,  black@@if_ts_show_clutch_down
-	indicator =				{ brakePedalState },			"No braking",		"Brake down",  white,  black,	red,  black
+	indicator =				{ brakePedalState },			"No braking",		"Brake down",  white,  black,	red,  black@@if_ts_show_brake_pedal_indicator
 	indicator =				{ acButtonState },		"AC Switch off",		"AC Switch on",  white,  black,	blue,  white@@if_ts_show_air_conditioning
 	indicator =					{ m_acEnabled },		"AC Relay off",		"AC Relay on",  white,  black,	blue,  white@@if_ts_show_air_conditioning
 	indicator =			{ isIdleClosedLoop },			"Not idling",				"Idling",  white,  black,  green,  black
