only:ts_show_iat

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1893,7 +1893,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =					{ isTps2Error },				"TPS 2 OK",		"TPS 2 error",  white,  black,	red,  black@@if_ts_show_tps2
 	indicator =					{ isPedalError },				"Pedal OK",		"Pedal error",  white,  black,	red,  black@@if_ts_show_etb
 	indicator =					{ isCltError },				"CLT OK",			"CLT error",  white,  black,	red,  black
-	indicator =					{ isIatError },				"IAT OK",			"IAT error",  white,  black,	red,  black
+	indicator =					{ isIatError },				"IAT OK",			"IAT error",  white,  black,	red,  black@@if_ts_show_iat
 	; not implemented
 	; indicator = { ind_map_error}, "map",	"map error",	white, black, red,	black
 	indicator =					{ sd_present },			"No SD card",	"SD card present",  white,  black,  green,  black
@@ -2197,7 +2197,7 @@ menuDialog = main
 
 		# Thermistors
 		subMenu = cltSensor,				"CLT sensor", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = iatSensor,				"IAT sensor", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = iatSensor,				"IAT sensor", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_iat
 		subMenu = std_separator
 
 		# TPS/pedal
