ini template: add SD card commands buttons, rework dialog ...fix SD commands

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2421,10 +2421,10 @@ cmd_dfu						= "@@TS_IO_TEST_COMMAND_char@@\x00\xba\x00\x00"
 cmd_openblt				= "@@TS_IO_TEST_COMMAND_char@@\x00\xbc\x00\x00"
 
 ; SD card related
-cmd_mount_pc				= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_MOUNT_PC_16_hex@@"
-cmd_mount_ecu				= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_MOUNT_ECU_16_hex@@"
-cmd_unmount					= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_UNMOUNT_16_hex@@"
-cmd_format					= "@@TS_IO_TEST_COMMAND_char@@@@ts_14_command_TS_SD_FORMAT_16_hex@@"
+cmd_mount_pc				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_MOUNT_PC_16_hex@@"
+cmd_mount_ecu				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_MOUNT_ECU_16_hex@@"
+cmd_unmount					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_UNMOUNT_16_hex@@"
+cmd_format					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_FORMAT_16_hex@@"
 
 ; See 'executeTSCommand' in firmware source code
 
@@ -4367,16 +4367,41 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = canHw1
 		panel = canHw2	@@if_ts_show_can2
 
-	dialog = sdCard, "SD Card Logger"
-		field = "#rusEFI logs to SD when powered without USB connected"
-		field = "# and USB not connected for 15 seconds"
-		field = "#rusEFI connects SD to your PC when powered by USB"
+	dialog = sdCardHW, "SD Card Interface"
 		field = "Enable SD Card",						isSdCardEnabled
-		field = "Always start in Logging mode",			alwaysWriteSdCard, { isSdCardEnabled }
 		field = "CS Pin",								sdCardCsPin, { isSdCardEnabled }			@@if_ts_show_sd_pins
 		field = "SPI",									sdCardSpiDevice, { isSdCardEnabled }		@@if_ts_show_sd_pins
+
+	indicatorPanel = sdCardActivityIndicators, 2, { isSdCardEnabled }
+		indicator = { sd_active_wr }, "SD WR", "SD WR", white, black, green, black
+		indicator = { sd_active_rd }, "SD RD", "SD RD", white, black, green, black
+
+	dialog = sdCardLogging, "SD Card Logging"
+		field = "#rusEFI logs to SD when powered without USB connected"
+		field = "#and USB not connected for 15 seconds"
+		field = "#OR when Always start in Logging mode is enabled"
+		field = "#rusEFI connects SD to your PC when powered by USB"
+		field = "Always start in Logging mode",			alwaysWriteSdCard, { isSdCardEnabled }
 		field = "SD logger rate",						sdCardLogFrequency, { isSdCardEnabled }
 		field = "SD logger mode",						sdTriggerLog, { isSdCardEnabled }
+
+	dialog = sdCardCommands, "SD commands"
+		commandButton = "Mount to PC",					cmd_mount_pc
+		commandButton = "Mount to ECU",					cmd_mount_ecu
+		commandButton = "Unmount",						cmd_unmount
+		commandButton = "Format",						cmd_format
+
+	indicatorPanel = sdCardStateIndicators, 2, { isSdCardEnabled }
+		indicator = { sd_present },	 "No SD card", "SD card present", white, black, green, black
+		indicator = { sd_logging_internal }, "No SD logging", "SD logging", white, black, green, black
+		indicator = { sd_msd }, "No SD USB", "SD USB",  white,  black,  green,  black
+
+	dialog = sdCard, "SD Card"
+		panel = sdCardHW
+		panel = sdCardActivityIndicators
+		panel = sdCardLogging
+		panel = sdCardCommands
+		panel = sdCardStateIndicators
 
 	dialog = tle8888Dialog, "TLE8888", yAxis
 		field = "TLE8888 SPI",							tle8888spiDevice @@if_ts_show_spi
