gauges on sensor dialogs: map, flex only:alphax-8chan_f7

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3047,9 +3047,18 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Highest temperature",		oilTempSensor_tempC_3, {oilTempSensor_adcChannel != @@ADC_CHANNEL_NONE@@}
 		field = "Resistance @ HT",			oilTempSensor_resistance_3, {oilTempSensor_adcChannel != @@ADC_CHANNEL_NONE@@}
 
-  dialog = flexSensorDialog, "Flex Sensor"
+  dialog = flexSensorDialogLeft, ""
 		field = "Flex fuel sensor",					flexSensorPin
 		field = "Flex Signal",         flexSensorInverted@@if_ts_show_flex_inverted
+
+	dialog = flexGauges
+		gauge = flexPercentGauge
+		gauge = fuelTempGauge
+		gauge = rawFlexFreqGauge
+
+  dialog = flexSensorDialog, "Flex Sensor"
+		panel = flexSensorDialogLeft, West
+		panel = flexGauges, East
 
 	dialog = fuelTempSensor,	"Fuel Temp Sensor Settings"
 		field = "Input channel",			fuelTempSensor_adcChannel
@@ -3613,9 +3622,17 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Cylinder count to sample MAP",					mapMinBufferLength
     field = mapExpAverageAlpha, mapExpAverageAlpha
 
-	dialog = mapSettings, "", yAxis
+	dialog = mapSettingsLeft, "", yAxis
 		panel = mapCommon
 		panel = mapSensorAnalog
+
+	dialog = mapGauges
+		gauge = MAPGauge
+		gauge = rawMapGauge
+
+	dialog = mapSettings, "", border
+		panel = mapSettingsLeft, West
+		panel = mapGauges, East
 
 	dialog = analogBaroSettings, "Analog Sensor"
 		field = "Baro input",						    baroSensor_hwChannel, { baroSensor_hwChannel != @@ADC_CHANNEL_NONE@@ || (lps25BaroSensorScl == 0 && lps25BaroSensorSda == 0) }
