Error report file on SD card indicator

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4415,6 +4415,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		indicator = { sd_logging_internal }, "No SD logging", "SD logging", white, black, green, black
 		indicator = { sd_msd }, "No SD USB", "SD USB",  white,  black,  green,  black
 
+	indicatorPanel = sdCardErrorReportIndicators, 1, { isSdCardEnabled }
+		indicator = { hasFaultReportFile }, "No error reports", "Error report on SD", white, black, red, black
+
 	dialog = sdCard, "SD Card"
 		panel = sdCardHW
 		panel = sdPresentIndicators
@@ -4422,6 +4425,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = sdCardLogging
 		panel = sdCardStateIndicators
 		panel = sdCardCommands
+		panel = sdCardErrorReportIndicators
 
 	dialog = tle8888Dialog, "TLE8888", yAxis
 		field = "TLE8888 SPI",							tle8888spiDevice @@if_ts_show_spi
