mmc_card: report files delete command

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2425,6 +2425,7 @@ cmd_mount_pc				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts
 cmd_mount_ecu				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_MOUNT_ECU_16_hex@@"
 cmd_unmount					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_UNMOUNT_16_hex@@"
 cmd_format					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_FORMAT_16_hex@@"
+cmd_delete_reports			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_SD_DELETE_REPORTS_16_hex@@"
 
 ; See 'executeTSCommand' in firmware source code
 
@@ -4418,6 +4419,11 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	indicatorPanel = sdCardErrorReportIndicators, 1, { isSdCardEnabled }
 		indicator = { hasFaultReportFile }, "No error reports", "Error report on SD", white, black, red, black
 
+	dialog = sdReportCommands, "Fail reports"
+		field = "Executed only when SD card is mounted to ECU"
+		commandButton = "Remove all fail reports",		cmd_delete_reports
+		panel = sdCardErrorReportIndicators
+
 	dialog = sdCard, "SD Card"
 		panel = sdCardHW
 		panel = sdPresentIndicators
@@ -4425,7 +4431,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = sdCardLogging
 		panel = sdCardStateIndicators
 		panel = sdCardCommands
-		panel = sdCardErrorReportIndicators
+		panel = sdReportCommands
 
 	dialog = tle8888Dialog, "TLE8888", yAxis
 		field = "TLE8888 SPI",							tle8888spiDevice @@if_ts_show_spi
