If using the injector test tab the "ON times" and "Off times" are flipped vs looking at the Bench test tab. fix #7355

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4977,8 +4977,8 @@ dialog = tcuControls, "Transmission Settings"
 	; Injectors test
 	dialog = injTest_l, "Output test modes", yAxis
 		field = "Iterations", benchTestCount
-		field = "ON time", benchTestOffTime
-		field = "OFF time", benchTestOnTime
+		field = "On Time", benchTestOnTime
+		field = "Off Time", benchTestOffTime
 
 	dialog = injTest_r, "Reference gauges", yAxis
 		gauge = VBattGauge,North
