openocd bump to 20240916 as always from https://gnutoolchains.com/arm-eabi/openocd/

--- a/misc/install/openocd/stm32f103c8_blue_pill.cfg
+++ b/misc/install/openocd/stm32f103c8_blue_pill.cfg
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+
 # STM32F103C8 "Blue Pill"
 
 # NOTE:
@@ -11,5 +13,4 @@
 # board outside of its specification. If in doubt, comment the following line.
 set FLASH_SIZE 0x20000
 
-source [find openocd/stlink.cfg]
-source [find openocd/stm32f1x.cfg]
+source [find target/stm32f1x.cfg]
