--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2616,6 +2616,12 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Gap #4 to",		triggerGapOverrideTo4,		{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 4 }
 		field = "Gap #5 from",		triggerGapOverrideFrom5,	{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 5 }
 		field = "Gap #5 to",		triggerGapOverrideTo5,		{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 5 }
+		field = "Gap #6 from",		triggerGapOverrideFrom6,	{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 6 }
+		field = "Gap #6 to",		triggerGapOverrideTo6,		{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 6 }
+		field = "Gap #7 from",		triggerGapOverrideFrom7,	{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 7 }
+		field = "Gap #7 to",		triggerGapOverrideTo7,		{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 7 }
+		field = "Gap #8 from",		triggerGapOverrideFrom8,	{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 8 }
+		field = "Gap #8 to",		triggerGapOverrideTo8,		{ overrideTriggerGaps == 1 && gapTrackingLengthOverride >= 8 }
 		field = "Override well known VVT gaps",	overrideVvtTriggerGaps
 		field = gapVvtTrackingLengthOverride,				gapVvtTrackingLengthOverride, { overrideVvtTriggerGaps == 1 }
 		field = "First VVT gap from",	triggerVVTGapOverrideFrom1, { overrideVvtTriggerGaps == 1 }
