only:fixing indicators

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1870,9 +1870,9 @@ gaugeCategory = GPPWM Outputs
 	indicator = { etbErrorCodeBlinker0 != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etbErrorCode0)}, white, black, yellow, black
 
 	; minor info
-	indicator =						{ isFanOn },				"Fan off",				"Fan on",  white,  black,  green,  black
-	indicator =						{ isFan2On },			"Fan 2 off",			"Fan 2 on",  white,  black,  green,  black@@if_ts_show_fan2_settings
-	indicator =				{ isMainRelayOn },		"Main relay off",	"Main relay on",  white,  black,  green,  black
+	indicator =						{ fan1m_state },				"Fan off",				"Fan on",  white,  black,  green,  black
+	indicator =						{ fan2m_state },			"Fan 2 off",			"Fan 2 on",  white,  black,  green,  black@@if_ts_show_fan2_settings
+  indicator =				{ mainRelayState },		"Main relay off",	"Main relay on",  white,  black,  green,  black
 	; Line 2
 	;			=							expression,				off-label,				on-label, off-bg, off-fg,  on-bg,  on-fg
 	indicator =					{ isFuelPumpOn },		"Fuel pump off",		"Fuel pump on",  white,  black,  green,  black@@if_ts_show_fuel_pump
