only:indicator @@if_ts_show_main_relay

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1872,7 +1872,7 @@ gaugeCategory = GPPWM Outputs
 	; minor info
 	indicator =						{ fan1m_state },				"Fan off",				"Fan on",  white,  black,  green,  black
 	indicator =						{ fan2m_state },			"Fan 2 off",			"Fan 2 on",  white,  black,  green,  black@@if_ts_show_fan2_settings
-	indicator =				{ mainRelayState },		"Main relay off",	"Main relay on",  white,  black,  green,  black
+	indicator =				{ mainRelayState },		"Main relay off",	"Main relay on",  white,  black,  green,  black@@if_ts_show_main_relay
 	; Line 2
 	;			=							expression,				off-label,				on-label, off-bg, off-fg,  on-bg,  on-fg
 	indicator =					{ isFuelPumpOn },		"Fuel pump off",		"Fuel pump on",  white,  black,  green,  black@@if_ts_show_fuel_pump
