Target AFR Blend should be called Target AFR Adder #7371

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -963,14 +963,14 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins = minimumOilPressureValues
 		gauge = OilPressGauge
 
-	curve = targetAfrBlend1Bias, "Target AFR blend 1 bias"
+	curve = targetAfrBlend1Bias, "Target AFR adder 1 bias"
 		columnLabel = "param", "bias"
 		xAxis = 0, 100, 11
 		yAxis = 0, 100, 5
 		xBins = targetAfrBlends1_blendBins, targetAfrBlendParameter1
 		yBins = targetAfrBlends1_blendValues
 
-	curve = targetAfrBlend2Bias, "Target AFR blend 2 bias"
+	curve = targetAfrBlend2Bias, "Target AFR adder 2 bias"
 		columnLabel = "param", "bias"
 		xAxis = 0, 100, 11
 		yAxis = 0, 100, 5
@@ -1170,14 +1170,14 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins		= boostClosedLoopBlends2_table
 		gridOrient  = 250, 0, 340
 
-	table = targetAfrBlend1Table, targetAfrBlend1Map, "Target AFR blend 1", 1
+	table = targetAfrBlend1Table, targetAfrBlend1Map, "Target AFR adder 1", 1
 		xyLabels = "RPM", "TPS"
 		xBins		= targetAfrBlends1_rpmBins, RPMValue
 		yBins		= targetAfrBlends1_loadBins, TPSValue
 		zBins		= targetAfrBlends1_table
 		gridOrient	= 250, 0, 340
 
-	table = targetAfrBlend2Table, targetAfrBlend2Map, "Target AFR blend 2", 1
+	table = targetAfrBlend2Table, targetAfrBlend2Map, "Target AFR adder 2", 1
 		xyLabels = "RPM", "TPS"
 		xBins		= targetAfrBlends2_rpmBins, RPMValue
 		yBins		= targetAfrBlends2_loadBins, TPSValue
@@ -2002,7 +2002,7 @@ menuDialog = main
 		subMenu = afrTableTbl,				"Target AFR", 0, {isInjectionEnabled == 1}
 #endif
 
-		groupMenu = "Target AFR blend tables"
+		groupMenu = "Target AFR adder tables"
 		groupChildMenu = targetAfrBlend1Cfg,	"Target AFR 1 bias"
 		groupChildMenu = targetAfrBlend1Table,	"Target AFR 1 adder",	{ targetAfrBlends1_blendParameter != 0 }
 		groupChildMenu = targetAfrBlend2Cfg,	"Target AFR 2 bias"
@@ -2976,8 +2976,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Y axis override (set Zero for no override)", boostClosedLoopBlends2_yAxisOverride, {boostClosedLoopBlends2_blendParameter}
 		panel = boostClosedLoopBlend2Bias, {boostClosedLoopBlends2_blendParameter}
 
-	dialog = targetAfrBlend1Cfg, "Target AFR blend 1 config"
-		field = "#The bias table controls how much of the blend table"
+	dialog = targetAfrBlend1Cfg, "Target AFR adder 1 config"
+		field = "#The bias table controls how much of the adder table"
 		field = "#is mixed in to the target AFR table. For example, a value of"
 		field = "#+10 in the table, with 50 as the current bias will result"
 		field = "#in +5.0 added to target AFR %."
@@ -2987,8 +2987,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Y axis override (set Zero for no override)", targetAfrBlends1_yAxisOverride, { targetAfrBlends1_blendParameter }
 		panel = targetAfrBlend1Bias, { targetAfrBlends1_blendParameter }
 
-	dialog = targetAfrBlend2Cfg, "Target AFR blend 2 config"
-		field = "#The bias table controls how much of the blend table"
+	dialog = targetAfrBlend2Cfg, "Target AFR adder 2 config"
+		field = "#The bias table controls how much of the adder table"
 		field = "#is mixed in to the target AFR table. For example, a value of"
 		field = "#+10 in the table, with 50 as the current bias will result"
 		field = "#in +5.0 added to target AFR %."
